@@ -16,7 +16,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
+
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		 <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -32,6 +37,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -45,7 +51,7 @@
 				<!-- <version>3.8.1</version> -->
 				<configuration>
 					<release>17</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<!-- <compilerArgs>- -enable-preview</compilerArgs> -->
 				</configuration>
 			</plugin>
 		</plugins>
